// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation fixtures: 1 PC vs 1 enemy (parity with v0.5.0 pair detail) > produces a stable result with focus-fire and fixed seed 1`] = `
{
  "anyPcDownProbability": 0.977,
  "iterationsCompleted": 1000,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "troll",
      "name": "troll",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.009,
      "downProbability": 0.977,
      "id": "mira",
      "meanEndingHp": 0.125,
      "name": "mira",
      "topContributingEnemyId": "troll",
    },
  ],
  "tpkProbability": 0.977,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.997,
  "meanFirstDownRound": 1.4142427281845538,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.04,
      "downProbability": 0.877,
      "id": "mira",
      "meanEndingHp": 0.719,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.044,
      "downProbability": 0.856,
      "id": "seam",
      "meanEndingHp": 1.406,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.033,
      "downProbability": 0.891,
      "id": "jor",
      "meanEndingHp": 0.621,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.041,
      "downProbability": 0.87,
      "id": "elya",
      "meanEndingHp": 0.596,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.626,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 1,
  "meanFirstDownRound": 1.359,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.044,
      "downProbability": 0.926,
      "id": "mira",
      "meanEndingHp": 1.036,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.024,
      "downProbability": 0.604,
      "id": "seam",
      "meanEndingHp": 7.686,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.05,
      "downProbability": 0.996,
      "id": "jor",
      "meanEndingHp": 0.03,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.032,
      "downProbability": 1,
      "id": "elya",
      "meanEndingHp": 0,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.604,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under predator 1`] = `
{
  "anyPcDownProbability": 1,
  "meanFirstDownRound": 1.346,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.038,
      "downProbability": 0.924,
      "id": "mira",
      "meanEndingHp": 1.014,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.022,
      "downProbability": 0.611,
      "id": "seam",
      "meanEndingHp": 7.406,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.041,
      "downProbability": 0.999,
      "id": "jor",
      "meanEndingHp": 0.004,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.05,
      "downProbability": 1,
      "id": "elya",
      "meanEndingHp": 0,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.611,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.998,
  "meanFirstDownRound": 1.5581162324649298,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "boss",
      "name": "boss",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.021,
      "downProbability": 0.923,
      "id": "mira",
      "meanEndingHp": 0.813,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.016,
      "downProbability": 0.904,
      "id": "seam",
      "meanEndingHp": 1.043,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.02,
      "downProbability": 0.918,
      "id": "jor",
      "meanEndingHp": 0.778,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.018,
      "downProbability": 0.908,
      "id": "elya",
      "meanEndingHp": 0.966,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.731,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.999,
  "meanFirstDownRound": 1.7607607607607607,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 1,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.004,
      "downProbability": 0.936,
      "id": "mira",
      "meanEndingHp": 0.292,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.005,
      "downProbability": 0.905,
      "id": "seam",
      "meanEndingHp": 0.493,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.935,
      "id": "jor",
      "meanEndingHp": 0.28,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.005,
      "downProbability": 0.962,
      "id": "elya",
      "meanEndingHp": 0.171,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.823,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.903,
  "perEnemy": [
    {
      "damageShare": 0.2531461977865048,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.25054667975722955,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.24539227061763655,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.25091485183862905,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "seam",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.007,
      "downProbability": 0.682,
      "id": "mira",
      "meanEndingHp": 1.582,
      "name": "mira",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.667,
      "id": "seam",
      "meanEndingHp": 1.802,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.007,
      "downProbability": 0.713,
      "id": "jor",
      "meanEndingHp": 1.41,
      "name": "jor",
      "topContributingEnemyId": "mook-1",
    },
    {
      "deathProbability": 0.007,
      "downProbability": 0.695,
      "id": "elya",
      "meanEndingHp": 1.574,
      "name": "elya",
      "topContributingEnemyId": "mook-1",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.471,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 1,
  "perEnemy": [
    {
      "damageShare": 0.2443818895775181,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.2503075176231253,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.25283862421346454,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.25247196858589205,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.006,
      "downProbability": 0.826,
      "id": "mira",
      "meanEndingHp": 2.066,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.456,
      "id": "seam",
      "meanEndingHp": 9.309,
      "name": "seam",
      "topContributingEnemyId": "mook-3",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.989,
      "id": "jor",
      "meanEndingHp": 0.077,
      "name": "jor",
      "topContributingEnemyId": "mook-3",
    },
    {
      "deathProbability": 0.007,
      "downProbability": 1,
      "id": "elya",
      "meanEndingHp": 0,
      "name": "elya",
      "topContributingEnemyId": "mook-2",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.456,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under predator 1`] = `
{
  "anyPcDownProbability": 1,
  "perEnemy": [
    {
      "damageShare": 0.25268190298507465,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.25556203358208956,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.2459305037313433,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.24582555970149253,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.109,
      "downProbability": 0.862,
      "id": "mira",
      "meanEndingHp": 1.688,
      "name": "mira",
      "topContributingEnemyId": "mook-1",
    },
    {
      "deathProbability": 0.008,
      "downProbability": 0.484,
      "id": "seam",
      "meanEndingHp": 8.467,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.008,
      "downProbability": 0.989,
      "id": "jor",
      "meanEndingHp": 0.085,
      "name": "jor",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0.007,
      "downProbability": 1,
      "id": "elya",
      "meanEndingHp": 0,
      "name": "elya",
      "topContributingEnemyId": "mook-2",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.484,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.982,
  "perEnemy": [
    {
      "damageShare": 0.2515181039561336,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.25550595912448454,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.24562695427561518,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.2473489826437667,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.001,
      "downProbability": 0.787,
      "id": "mira",
      "meanEndingHp": 1.898,
      "name": "mira",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.785,
      "id": "seam",
      "meanEndingHp": 1.898,
      "name": "seam",
      "topContributingEnemyId": "mook-3",
    },
    {
      "deathProbability": 0.004,
      "downProbability": 0.775,
      "id": "jor",
      "meanEndingHp": 2.049,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.79,
      "id": "elya",
      "meanEndingHp": 1.887,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.521,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.876,
  "perEnemy": [
    {
      "damageShare": 0.2512409658804415,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.24905596952210207,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.24907837974116198,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.25062468485629447,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.688,
      "id": "mira",
      "meanEndingHp": 1.662,
      "name": "mira",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.657,
      "id": "seam",
      "meanEndingHp": 1.896,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.681,
      "id": "jor",
      "meanEndingHp": 1.654,
      "name": "jor",
      "topContributingEnemyId": "mook-2",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.713,
      "id": "elya",
      "meanEndingHp": 1.543,
      "name": "elya",
      "topContributingEnemyId": "mook-1",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.493,
}
`;

exports[`simulation fixtures: degenerate setups > TPK setup converges to high any-PC-down and TPK 1`] = `
{
  "anyPcDownProbability": 1,
  "meanFirstDownRound": 1.002,
  "tpkProbability": 1,
}
`;

exports[`simulation fixtures: degenerate setups > safe setup converges to near-zero down risk 1`] = `
{
  "anyPcDownProbability": 0,
  "tpkProbability": 0,
}
`;
